[package]
name = "paxos-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] } # Add "serde" here
tokio = { version = "1", features = ["full"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
rand = "0.8"
